Updated documentation after release